shni_grammar_reduced.output
Grammar

    0 $accept: complete_commands $end

    1 complete_commands: complete_commands separator list
    2                  | list

    3 list: pipeline
    4     | list AND_IF linebreak pipeline
    5     | list OR_IF linebreak pipeline

    6 pipeline: command
    7         | pipeline PIPE linebreak command

    8 command: simple_command
    9        | subshell
   10        | subshell redirect_list

   11 subshell: OPAR compound_list CPAR

   12 compound_list: linebreak term
   13              | linebreak term separator

   14 term: term separator list
   15     | list

   16 simple_command: cmd_prefix cmd_word cmd_suffix
   17               | cmd_prefix cmd_word
   18               | cmd_prefix
   19               | cmd_name cmd_suffix
   20               | cmd_name

   21 cmd_name: WORD

   22 cmd_word: WORD

   23 cmd_prefix: io_redirect
   24           | cmd_prefix io_redirect

   25 cmd_suffix: io_redirect
   26           | cmd_suffix io_redirect
   27           | WORD
   28           | cmd_suffix WORD

   29 redirect_list: io_redirect
   30              | redirect_list io_redirect

   31 io_redirect: io_file
   32            | io_here

   33 io_file: LESS filename
   34        | GREAT filename
   35        | DGREAT filename

   36 filename: WORD

   37 io_here: DLESS here_end

   38 here_end: WORD

   39 separator: NEWLINE
   40          | separator NEWLINE

   41 linebreak: separator
   42          | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    WORD (258) 21 22 27 28 36 38
    NEWLINE (259) 39 40
    PIPE (260) 7
    LESS (261) 33
    GREAT (262) 34
    DLESS (263) 37
    DGREAT (264) 35
    AND_IF (265) 4
    OR_IF (266) 5
    OPAR (267) 11
    CPAR (268) 11


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    complete_commands (15)
        on left: 1 2
        on right: 0 1
    list (16)
        on left: 3 4 5
        on right: 1 2 4 5 14 15
    pipeline (17)
        on left: 6 7
        on right: 3 4 5 7
    command (18)
        on left: 8 9 10
        on right: 6 7
    subshell (19)
        on left: 11
        on right: 9 10
    compound_list (20)
        on left: 12 13
        on right: 11
    term (21)
        on left: 14 15
        on right: 12 13 14
    simple_command (22)
        on left: 16 17 18 19 20
        on right: 8
    cmd_name (23)
        on left: 21
        on right: 19 20
    cmd_word (24)
        on left: 22
        on right: 16 17
    cmd_prefix (25)
        on left: 23 24
        on right: 16 17 18 24
    cmd_suffix (26)
        on left: 25 26 27 28
        on right: 16 19 26 28
    redirect_list (27)
        on left: 29 30
        on right: 10 30
    io_redirect (28)
        on left: 31 32
        on right: 23 24 25 26 29 30
    io_file (29)
        on left: 33 34 35
        on right: 31
    filename (30)
        on left: 36
        on right: 33 34 35
    io_here (31)
        on left: 37
        on right: 32
    here_end (32)
        on left: 38
        on right: 37
    separator (33)
        on left: 39 40
        on right: 1 13 14 40 41
    linebreak (34)
        on left: 41 42
        on right: 4 5 7 12 13


State 0

    0 $accept: • complete_commands $end

    WORD    shift, and go to state 1
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5
    OPAR    shift, and go to state 6

    complete_commands  go to state 7
    list               go to state 8
    pipeline           go to state 9
    command            go to state 10
    subshell           go to state 11
    simple_command     go to state 12
    cmd_name           go to state 13
    cmd_prefix         go to state 14
    io_redirect        go to state 15
    io_file            go to state 16
    io_here            go to state 17


State 1

   21 cmd_name: WORD •

    $default  reduce using rule 21 (cmd_name)


State 2

   33 io_file: LESS • filename

    WORD  shift, and go to state 18

    filename  go to state 19


State 3

   34 io_file: GREAT • filename

    WORD  shift, and go to state 18

    filename  go to state 20


State 4

   37 io_here: DLESS • here_end

    WORD  shift, and go to state 21

    here_end  go to state 22


State 5

   35 io_file: DGREAT • filename

    WORD  shift, and go to state 18

    filename  go to state 23


State 6

   11 subshell: OPAR • compound_list CPAR

    NEWLINE  shift, and go to state 24

    $default  reduce using rule 42 (linebreak)

    compound_list  go to state 25
    separator      go to state 26
    linebreak      go to state 27


State 7

    0 $accept: complete_commands • $end
    1 complete_commands: complete_commands • separator list

    $end     shift, and go to state 28
    NEWLINE  shift, and go to state 24

    separator  go to state 29


State 8

    2 complete_commands: list •
    4 list: list • AND_IF linebreak pipeline
    5     | list • OR_IF linebreak pipeline

    AND_IF  shift, and go to state 30
    OR_IF   shift, and go to state 31

    $default  reduce using rule 2 (complete_commands)


State 9

    3 list: pipeline •
    7 pipeline: pipeline • PIPE linebreak command

    PIPE  shift, and go to state 32

    $default  reduce using rule 3 (list)


State 10

    6 pipeline: command •

    $default  reduce using rule 6 (pipeline)


State 11

    9 command: subshell •
   10        | subshell • redirect_list

    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5

    $default  reduce using rule 9 (command)

    redirect_list  go to state 33
    io_redirect    go to state 34
    io_file        go to state 16
    io_here        go to state 17


State 12

    8 command: simple_command •

    $default  reduce using rule 8 (command)


State 13

   19 simple_command: cmd_name • cmd_suffix
   20               | cmd_name •

    WORD    shift, and go to state 35
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5

    $default  reduce using rule 20 (simple_command)

    cmd_suffix   go to state 36
    io_redirect  go to state 37
    io_file      go to state 16
    io_here      go to state 17


State 14

   16 simple_command: cmd_prefix • cmd_word cmd_suffix
   17               | cmd_prefix • cmd_word
   18               | cmd_prefix •
   24 cmd_prefix: cmd_prefix • io_redirect

    WORD    shift, and go to state 38
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5

    $default  reduce using rule 18 (simple_command)

    cmd_word     go to state 39
    io_redirect  go to state 40
    io_file      go to state 16
    io_here      go to state 17


State 15

   23 cmd_prefix: io_redirect •

    $default  reduce using rule 23 (cmd_prefix)


State 16

   31 io_redirect: io_file •

    $default  reduce using rule 31 (io_redirect)


State 17

   32 io_redirect: io_here •

    $default  reduce using rule 32 (io_redirect)


State 18

   36 filename: WORD •

    $default  reduce using rule 36 (filename)


State 19

   33 io_file: LESS filename •

    $default  reduce using rule 33 (io_file)


State 20

   34 io_file: GREAT filename •

    $default  reduce using rule 34 (io_file)


State 21

   38 here_end: WORD •

    $default  reduce using rule 38 (here_end)


State 22

   37 io_here: DLESS here_end •

    $default  reduce using rule 37 (io_here)


State 23

   35 io_file: DGREAT filename •

    $default  reduce using rule 35 (io_file)


State 24

   39 separator: NEWLINE •

    $default  reduce using rule 39 (separator)


State 25

   11 subshell: OPAR compound_list • CPAR

    CPAR  shift, and go to state 41


State 26

   40 separator: separator • NEWLINE
   41 linebreak: separator •

    NEWLINE  shift, and go to state 42

    $default  reduce using rule 41 (linebreak)


State 27

   12 compound_list: linebreak • term
   13              | linebreak • term separator

    WORD    shift, and go to state 1
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5
    OPAR    shift, and go to state 6

    list            go to state 43
    pipeline        go to state 9
    command         go to state 10
    subshell        go to state 11
    term            go to state 44
    simple_command  go to state 12
    cmd_name        go to state 13
    cmd_prefix      go to state 14
    io_redirect     go to state 15
    io_file         go to state 16
    io_here         go to state 17


State 28

    0 $accept: complete_commands $end •

    $default  accept


State 29

    1 complete_commands: complete_commands separator • list
   40 separator: separator • NEWLINE

    WORD     shift, and go to state 1
    NEWLINE  shift, and go to state 42
    LESS     shift, and go to state 2
    GREAT    shift, and go to state 3
    DLESS    shift, and go to state 4
    DGREAT   shift, and go to state 5
    OPAR     shift, and go to state 6

    list            go to state 45
    pipeline        go to state 9
    command         go to state 10
    subshell        go to state 11
    simple_command  go to state 12
    cmd_name        go to state 13
    cmd_prefix      go to state 14
    io_redirect     go to state 15
    io_file         go to state 16
    io_here         go to state 17


State 30

    4 list: list AND_IF • linebreak pipeline

    NEWLINE  shift, and go to state 24

    $default  reduce using rule 42 (linebreak)

    separator  go to state 26
    linebreak  go to state 46


State 31

    5 list: list OR_IF • linebreak pipeline

    NEWLINE  shift, and go to state 24

    $default  reduce using rule 42 (linebreak)

    separator  go to state 26
    linebreak  go to state 47


State 32

    7 pipeline: pipeline PIPE • linebreak command

    NEWLINE  shift, and go to state 24

    $default  reduce using rule 42 (linebreak)

    separator  go to state 26
    linebreak  go to state 48


State 33

   10 command: subshell redirect_list •
   30 redirect_list: redirect_list • io_redirect

    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5

    $default  reduce using rule 10 (command)

    io_redirect  go to state 49
    io_file      go to state 16
    io_here      go to state 17


State 34

   29 redirect_list: io_redirect •

    $default  reduce using rule 29 (redirect_list)


State 35

   27 cmd_suffix: WORD •

    $default  reduce using rule 27 (cmd_suffix)


State 36

   19 simple_command: cmd_name cmd_suffix •
   26 cmd_suffix: cmd_suffix • io_redirect
   28           | cmd_suffix • WORD

    WORD    shift, and go to state 50
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5

    $default  reduce using rule 19 (simple_command)

    io_redirect  go to state 51
    io_file      go to state 16
    io_here      go to state 17


State 37

   25 cmd_suffix: io_redirect •

    $default  reduce using rule 25 (cmd_suffix)


State 38

   22 cmd_word: WORD •

    $default  reduce using rule 22 (cmd_word)


State 39

   16 simple_command: cmd_prefix cmd_word • cmd_suffix
   17               | cmd_prefix cmd_word •

    WORD    shift, and go to state 35
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5

    $default  reduce using rule 17 (simple_command)

    cmd_suffix   go to state 52
    io_redirect  go to state 37
    io_file      go to state 16
    io_here      go to state 17


State 40

   24 cmd_prefix: cmd_prefix io_redirect •

    $default  reduce using rule 24 (cmd_prefix)


State 41

   11 subshell: OPAR compound_list CPAR •

    $default  reduce using rule 11 (subshell)


State 42

   40 separator: separator NEWLINE •

    $default  reduce using rule 40 (separator)


State 43

    4 list: list • AND_IF linebreak pipeline
    5     | list • OR_IF linebreak pipeline
   15 term: list •

    AND_IF  shift, and go to state 30
    OR_IF   shift, and go to state 31

    $default  reduce using rule 15 (term)


State 44

   12 compound_list: linebreak term •
   13              | linebreak term • separator
   14 term: term • separator list

    NEWLINE  shift, and go to state 24

    $default  reduce using rule 12 (compound_list)

    separator  go to state 53


State 45

    1 complete_commands: complete_commands separator list •
    4 list: list • AND_IF linebreak pipeline
    5     | list • OR_IF linebreak pipeline

    AND_IF  shift, and go to state 30
    OR_IF   shift, and go to state 31

    $default  reduce using rule 1 (complete_commands)


State 46

    4 list: list AND_IF linebreak • pipeline

    WORD    shift, and go to state 1
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5
    OPAR    shift, and go to state 6

    pipeline        go to state 54
    command         go to state 10
    subshell        go to state 11
    simple_command  go to state 12
    cmd_name        go to state 13
    cmd_prefix      go to state 14
    io_redirect     go to state 15
    io_file         go to state 16
    io_here         go to state 17


State 47

    5 list: list OR_IF linebreak • pipeline

    WORD    shift, and go to state 1
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5
    OPAR    shift, and go to state 6

    pipeline        go to state 55
    command         go to state 10
    subshell        go to state 11
    simple_command  go to state 12
    cmd_name        go to state 13
    cmd_prefix      go to state 14
    io_redirect     go to state 15
    io_file         go to state 16
    io_here         go to state 17


State 48

    7 pipeline: pipeline PIPE linebreak • command

    WORD    shift, and go to state 1
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5
    OPAR    shift, and go to state 6

    command         go to state 56
    subshell        go to state 11
    simple_command  go to state 12
    cmd_name        go to state 13
    cmd_prefix      go to state 14
    io_redirect     go to state 15
    io_file         go to state 16
    io_here         go to state 17


State 49

   30 redirect_list: redirect_list io_redirect •

    $default  reduce using rule 30 (redirect_list)


State 50

   28 cmd_suffix: cmd_suffix WORD •

    $default  reduce using rule 28 (cmd_suffix)


State 51

   26 cmd_suffix: cmd_suffix io_redirect •

    $default  reduce using rule 26 (cmd_suffix)


State 52

   16 simple_command: cmd_prefix cmd_word cmd_suffix •
   26 cmd_suffix: cmd_suffix • io_redirect
   28           | cmd_suffix • WORD

    WORD    shift, and go to state 50
    LESS    shift, and go to state 2
    GREAT   shift, and go to state 3
    DLESS   shift, and go to state 4
    DGREAT  shift, and go to state 5

    $default  reduce using rule 16 (simple_command)

    io_redirect  go to state 51
    io_file      go to state 16
    io_here      go to state 17


State 53

   13 compound_list: linebreak term separator •
   14 term: term separator • list
   40 separator: separator • NEWLINE

    WORD     shift, and go to state 1
    NEWLINE  shift, and go to state 42
    LESS     shift, and go to state 2
    GREAT    shift, and go to state 3
    DLESS    shift, and go to state 4
    DGREAT   shift, and go to state 5
    OPAR     shift, and go to state 6

    $default  reduce using rule 13 (compound_list)

    list            go to state 57
    pipeline        go to state 9
    command         go to state 10
    subshell        go to state 11
    simple_command  go to state 12
    cmd_name        go to state 13
    cmd_prefix      go to state 14
    io_redirect     go to state 15
    io_file         go to state 16
    io_here         go to state 17


State 54

    4 list: list AND_IF linebreak pipeline •
    7 pipeline: pipeline • PIPE linebreak command

    PIPE  shift, and go to state 32

    $default  reduce using rule 4 (list)


State 55

    5 list: list OR_IF linebreak pipeline •
    7 pipeline: pipeline • PIPE linebreak command

    PIPE  shift, and go to state 32

    $default  reduce using rule 5 (list)


State 56

    7 pipeline: pipeline PIPE linebreak command •

    $default  reduce using rule 7 (pipeline)


State 57

    4 list: list • AND_IF linebreak pipeline
    5     | list • OR_IF linebreak pipeline
   14 term: term separator list •

    AND_IF  shift, and go to state 30
    OR_IF   shift, and go to state 31

    $default  reduce using rule 14 (term)
